--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body,
+button,
+input,
+h1,
+h2,
+h3,
+h4,
+a {
+    font-family: fantasy, Arial, Helvetica, sans-serif !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.name {
+    display: flex;
+    align-items: center;
 }
+
+/* .mycontainer {
+    max-width: 1100px !important;
+    display: flex;
+    align-items: center;
+    padding-top: 200px;
+
+
+} */
