--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,65 @@ a {
 .cl {
     color: #4183C4
 }
+
+.con {
+    display: flex;
+    justify-content: center;
+    margin-top: 20%;
+}
+
+.pnf {
+    display: flex;
+    width: 35vw;
+    height: 35vh;
+    border-radius: 3%;
+    box-shadow: 2px 2px rgb(216, 210, 202);
+    background-color: #e0e1e2;
+    top: 20%;
+    left: 50%;
+    justify-content: center;
+    padding: 5%;
+}
+
+.bb {
+    width: 500px;
+    display: block;
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header h4 {
+    overflow: hidden;
+    max-width: 20ch;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 1.2rem;
+}
+
+.tagline {
+    padding-top: 19px;
+
+
+}
+
+.centered-box {
+    position: absolute;
+    left: 40%;
+    top: 20%;
+    width: 30%;
+
+}
+
+.insert {
+    text-align: center;
+
+
+}
+
+.insert p {
+    line-height: 1.1rem;
+    text-align: center;
+
+
+}
